2018-01-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-user-agent-site-specific): Remove debug message.
	[emacs-w3m:12883]

2018-01-18  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-add-referer): Update for https support.
	(w3m-user-agent-site-specific-alist, w3m-user-agent-site-specific):
	New feature.
	(w3m-header-arguments, w3m-request-arguments): Integrate new feature.
	[emacs-w3m:12881]

2018-01-17  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-user-agent-change): New feature.
	(w3m-reload-this-page): Integrate new feature.
	(w3m-request-arguments, w3m-header-arguments): Ensure w3m and
	w3mmee honor `w3m-add-user-agent'.  [emacs-w3m:12876]

2018-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make `cd doc; make pdf' work again  [emacs-w3m:12875]

	This requires Texinfo the version >=6.3, and either (or both) of LuaTeX
	>=0.95 (i.e., TeXLive >=2016) or XeTeX >=0.9998 (i.e., TeXLive >=2012).

	* Makefile.in (clean): Use doc/Makefile's clean.

	* aclocal.m4 (AC_CHECK_TEXINFO): New function.

	* configure.in (MAKEINFO, TEXI2PDF): Check version.
	(TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.

	* doc/Makefile.in (TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.
	(PDFTEX): New internal variable.
	(dvi, dvi-en, dvi-ja, emacs-w3m.dvi, emacs-w3m-ja.dvi, .texi.dvi):
	Remove targets.
	(.texi.pdf): Use texi2pdf instead of dvipdfmx.
	(clean): Renew.

	* doc/emacs-w3m-ja.texi (texinfo-ja.tex): Use it instead of texinfo.tex.
	(@documentencoding): New.
	(@usedvipdfmx): Remove.

	* doc/texinfo-ja.tex: New file.
	* doc/texinfo.tex, doc/txi-en.tex, doc/txi-ja.tex: Renew.

2017-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Update selection buffer properly after deletion or renaming.
	Suggested by Boruch Baum ([emacs-w3m:12847]).

	* w3m-session.el (w3m-session-save): Update selection buffer.
	(w3m-session-select-rename, w3m-session-select-delete):
	Make the selected session highlighted after renaming or deletion.